feature:added event listener to the array

--- a/src/app/task-detail/task-detail.component.html
+++ b/src/app/task-detail/task-detail.component.html
@@ -1,2 +1,2 @@
 <p> {{task.description}} </p>
-<!-- <button  >Delete Items</button> -->
+<button  (click)='taskComplete(true)' >Delete Items</button>
