feature:added form component

--- a/src/app/task-detail/task-detail.component.html
+++ b/src/app/task-detail/task-detail.component.html
@@ -1,2 +1,3 @@
 <p> {{task.description}} </p>
-<button  (click)='taskComplete(true)' >Delete Items</button>
+<button  class="btn btn-primary" (click)='taskComplete(true)' >Delete Items</button>
+<br>
