--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,14 +1,31 @@
-<div>
-    <h3> Our To-Do List</h3>
-    <ul >
-       <div *ngFor="let task of tasks; let i=index">
-        <li appStrikethrough >
-            {{task.name}} </li>
+<div class="container-fluid ">
+        <h3 class="text-center text-warning"> Our To-Do List</h3>
+    
+       
+       
+    <div class="row" >
+     <div class="col-md-6">
+        <div *ngFor="let task of tasks; let i=index">
+        <p appStrikethrough >
+            {{task.id}}. {{task.name.toUpperCase()}}  </p>
             <br>
-            <button (click)='toogleDetails(i)'>Toggle Details</button>
-            <app-task-detail *ngIf='task.showDescription'(isComplete)="completeTask($event,i)" [task]="task" ></app-task-detail>
-        
-       </div>
-    </ul>
-    <p *ngIf="tasks.length>4"> Your tasks are many </p>
+            <div *ngIf='task.showDescription'>
+                <app-task-detail  [task]="task" (isComplete)="completeTask($event,i)" ></app-task-detail> <br>
+            </div>
+                <button class="btn btn-primary" (click)='toogleDetails(i)'>Display</button>
+        </div>
+     </div>
+     <div class="col-md-6">
+        <app-task-form></app-task-form>
+     </div>
+    
+    </div>
+    <p *ngIf="tasks.length>4" class="text-danger text-center"> Your tasks are many </p>
+ 
 </div>
+
+
+
+<style>
+    
+</style>
